--- a/InternetSpeedTest.vcxproj.filters
+++ b/InternetSpeedTest.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="src\filegetter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\fileputter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\requester.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\filegetter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\fileputter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
